# QuantVol

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
configs/: data_config.yaml  features_config.yaml
configs/model_configs/: lightgbm_tuned.json
data/interim/: gspc_cleaned.csv
data/processed/: gspc_features.csv
data/raw/: gspc_daily.csv
mlruns/0/: meta.yaml
mlruns/0/0523a166099c4e0c8e27b192a6d7f48d/: meta.yaml
mlruns/0/0523a166099c4e0c8e27b192a6d7f48d/metrics/: qlike  rmse
mlruns/0/0523a166099c4e0c8e27b192a6d7f48d/params/: colsample_bytree  learning_rate
mlruns/0/0a36d6246a444ec291c46179c075055d/: meta.yaml
mlruns/0/10c56c886ec945a8b7dc4bb708541c15/: meta.yaml
mlruns/0/15289fc0b56c47409310d0ae1820de15/: meta.yaml
mlruns/0/28bd2fa9e8184d8287799d0c612309a7/: meta.yaml
mlruns/0/4b54ec860d5646b098f48de9e7743e21/: meta.yaml
mlruns/0/8184f10f66cc4dd384072e549d7f0c6b/: meta.yaml
mlruns/0/941440be03c64861af7619d616fa0d4d/: meta.yaml
mlruns/0/b8a3f4e8ca4a41cf86cc74547e6b66cd/: meta.yaml
models/: har_rv_final.joblib  xgboost_final.joblib
notebooks/: 01_eda.ipynb  05_shap_analysis.ipynb
scripts/: log_baseline_runs.py  run_pipeline.py  train_final_models.py
src/api/: schemas.py
src/data/: ingest.py  realized_vol.py
src/quantvol/api/: inference.py  main.py  schemas.py
src/quantvol/app/: streamlit_app.py  streamlitapp.py
src/quantvol/data/: clean.py  ingest.py  realized_vol.py
src/quantvol/features/: build_features.py  regime_labels.py
src/quantvol/models/: base.py
src/quantvol/tracking/: mlflow_utils.py
src/quantvol/tuning/: optuna_search.py
src/quantvol/validation/: metrics.py
src/validation/: metrics.py  walk_forward.py
summary/: summary.txt
tests/: test_features.py
(+33 files in other folders)
