[project]
name = "quantvol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bk_ifti", email = "127694899+bk-12346@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "arch>=8.0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.5.1",
]

[project.scripts]
quantvol = "quantvol:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
